--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,28 @@
-@import-normalize; /* bring in normalize.css styles */
-
 body {
+  display: flex;
+  font-size: 20px;
+  line-height: 24px;
+  font-family: 'Moncerrat', sans-serif;
+  background-color: #9385b3;
+  padding: 20px;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: #EBD8FF;
+  font-style: normal;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navLink {
+  text-decoration: none;
+  margin-right: 50px;
+  font-weight: 700;
+  color: white;
+}
+
+.navLink.active {
+  color: violet;
+}
+
+.nav {
+  margin-bottom: 10px;
 }
